# slog

./: CMakeLists.txt  LICENSE  README.md
include/slog/: slog.h  slog_logdevice_console.h  slog_logdevice_custom_function.h  slog_logdevice_file.h
src/: slog.cpp  slog_logdevice_console.cpp  slog_logdevice_custom_function.cpp  slog_logdevice_file.cpp
tests/: tests.cpp
